# ckb

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci_aarch64_build_ubuntu.yaml
aggregator/aggregator-main/: Cargo.toml
aggregator/aggregator-main/src/: lib.rs
aggregator/aggregator-main/src/branch_to_rgbpp/: burn_tx.rs  clear_queue_outbox.rs  mod.rs
aggregator/aggregator-main/src/rgbpp_to_branch/: leap.rs  mod.rs
aggregator/aggregator-main/src/schemas/: leap.rs
aggregator/aggregator-main/src/transaction/: clear.rs  custodian.rs  leap.rs  mod.rs
aggregator/aggregator-main/src/utils/: key.rs
aggregator/aggregator-main/tests/: send_request.rs
aggregator/util/branch-tx/: Cargo.toml
aggregator/util/common/: Cargo.toml
aggregator/util/common/src/: error.rs  lib.rs  types.rs
aggregator/util/common/src/schemas/: mod.rs
aggregator/util/common/src/utils/: mod.rs  privkey.rs
aggregator/util/error/: Cargo.toml
aggregator/util/error/src/: lib.rs
aggregator/util/rgbpp-tx/: Cargo.toml
aggregator/util/rgbpp-tx/src/: clear.rs  custodian.rs  lib.rs
aggregator/util/rgbpp-tx/src/branch_to_rgbpp/: inbox.rs  mod.rs  unlock.rs
aggregator/util/rgbpp-tx/src/rgbpp_to_branch/: clear.rs  custodian.rs  mod.rs
aggregator/util/rgbpp-tx/tests/: init_queue.rs  send_request.rs
aggregator/util/storage/: Cargo.toml
aggregator/util/storage/src/: lib.rs
benches/benches/benchmarks/: resolve.rs
block-producer/: Cargo.toml
block-producer/src/: lib.rs
branch-chain-aggregator/: Cargo.toml
branch-chain-aggregator/src/: client.rs  error.rs  indexer.rs  lib.rs  service.rs
branch-chain-aggregator/src/store/: mod.rs  rocksdb.rs
branch-chain-aggregator/src/transaction/: clear.rs  custodian.rs  leap.rs  mod.rs
branch-chain-aggregator/src/utils/: key.rs  mod.rs
branch-chain-producer/: Cargo.toml
branch-chain-producer/src/: lib.rs
ckb-bin/: Cargo.toml
ckb-bin/src/: lib.rs
ckb-bin/src/subcommand/: aggregator.rs  init.rs  mod.rs
devtools/doc/rpc-gen/src/: utils.rs
pow/src/: lib.rs
resource/: build.rs  ckb-aggregator.toml  ckb.toml  request-cell-lock
resource/specs/: dev.toml
resource/src/: lib.rs  template.rs
rpc/: Cargo.toml  README.md
spec/: Cargo.toml
spec/src/: consensus.rs  lib.rs
test/src/: main.rs
test/src/specs/: mod.rs
test/src/specs/dao/: satoshi_dao_occupied.rs
tx-pool/src/: util.rs
util/app-config/src/: app_config.rs  args.rs  cli.rs  lib.rs
util/app-config/src/configs/: aggregator.rs  branch_chain.rs  mod.rs
util/app-config/src/legacy/: mod.rs
util/indexer/: Cargo.toml
util/indexer-sync/: Cargo.toml
util/indexer/src/: service.rs
util/launcher/: Cargo.toml
util/launcher/src/: lib.rs
util/occupied-capacity/core/src/: units.rs
util/rich-indexer/: Cargo.toml
util/types/src/core/: cell.rs
verification/src/: transaction_verifier.rs
verification/src/tests/: transaction_verifier.rs
