[package]
name = "branch-chain-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-app-config = { path = "../util/app-config", version = "= 0.116.1" }
ckb-async-runtime = { path = "../util/runtime", version = "= 0.116.1" }
ckb-jsonrpc-types = { path = "../util/jsonrpc-types", version = "= 0.116.1" }
ckb-stop-handler = { path = "../util/stop-handler", version = "= 0.116.1" }
ckb-types = { path = "../util/types", version = "= 0.116.1" }
env_logger = "0.9"
log = "0.4"
jsonrpc-core = "18.0"
jsonrpc-core-client = { version = "18.0", features = ["http", "tls"] }
jsonrpc-derive = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-server-utils = "18.0"
numext-fixed-uint = "0.1"
rhai = { version = "1.8.0", features = ["no_function", "no_float", "no_module"]}
rocksdb = { package = "ckb-rocksdb", version = "=0.21.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
version-compare = "0.0.11"

[dev-dependencies]
tempfile = "3.0"
rand = "0.6"