
[package]
name = "branch-chain-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-app-config = { path = "../util/app-config", version = "= 0.116.1" }
ckb-async-runtime = { path = "../util/runtime", version = "= 0.116.1" }
ckb-logger = { path = "../util/logger", version = "= 0.116.1" }
ckb-stop-handler = { path = "../util/stop-handler", version = "= 0.116.1" }

ckb-hash = "=0.116.1"
ckb-gen-types = { version = "=0.116.1", default-features = false }
ckb-jsonrpc-types = "=0.116.1"
ckb-types = "=0.116.1"

ckb-sdk = "=3.2.0"
jsonrpc-core = "18.0"
molecule = { version = "0.7.5", default-features = false }
reqwest = { version = "0.12.4", features = ["json"] }
secp256k1 = { version = "0.24", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
