[package]
name = "branch-chain-producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = { path = "../util/types", version = "= 0.116.1" }
ckb-network = { path = "../network", version = "= 0.116.1" }
ckb-shared = { path = "../shared", version = "= 0.116.1" }
ckb-chain = { path = "../chain", version = "= 0.116.1" }
ckb-logger = { path = "../util/logger", version = "= 0.116.1" }
ckb-error = { path = "../error", version = "= 0.116.1" }
ckb-stop-handler = { path = "../util/stop-handler", version = "= 0.116.1" }
ckb-async-runtime = { path = "../util/runtime", version = "= 0.116.1" }
