
[package]
name = "aggregator-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aggregator-common = { path = "../util/common", version = "0.1.0" }
aggregator-storage = { path = "../util/storage", version = "0.1.0" }
aggregator-rgbpp-tx = { path = "../util/rgbpp-tx", version = "0.1.0" }
ckb-app-config = { path = "../../util/app-config", version = "= 0.116.1" }
ckb-channel = { path = "../../util/channel", version = "= 0.116.1" }
ckb-hash = { path = "../../util/hash", version = "= 0.116.1" }
ckb-logger = { path = "../../util/logger", version = "= 0.116.1" }

ckb-sdk = { git = "https://github.com/ethanyuan/ckb-sdk-rust", branch = "v3.2.1-branch-chain", features = ["native-tls-vendored"] }
ckb-gen-types = { package = "ckb-gen-types", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-jsonrpc-types = { package = "ckb-jsonrpc-types", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-types = { package = "ckb-types", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }

crossbeam-channel = "0.5.1"
jsonrpc-core = "18.0"
molecule = { version = "0.7.5", default-features = false }
reqwest = { version = "0.12.4", features = ["json"] }
secp256k1 = { version = "0.24", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"