[package]
name = "aggregator-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-gen-types = { path = "../../../util/gen-types", version = "= 0.116.1" }
ckb-hash = { path = "../../../util/hash", version = "= 0.116.1" }
ckb-types = { path = "../../../util/types", version = "= 0.116.1" }

molecule = { version = "0.7.5", default-features = false }
secp256k1 = { version = "0.24", features = ["recovery"] }
thiserror = "1.0"