[package]
name = "aggregator-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aggregator-common = { path = "../common", version = "0.1.0" }

ckb-types = { path = "../../../util/types", version = "= 0.116.1" }

rocksdb = { package = "ckb-rocksdb", version ="=0.21.1", features = ["snappy"], default-features = false }

[dev-dependencies]
tempfile = "3"